InProgress #21240 - [Feature] Added more fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -157,6 +157,7 @@ gs1_gs1Model.property.gs1_isTradeItemPackedIrregularly.description              
 gs1_gs1Model.property.gs1_isTradeItemPackedIrregularly.title                              = Article irr\u00E9guli\u00E8rement emball\u00E9
 gs1_gs1Model.property.gs1_isTradeItemReorderable.description                              = Indication si l\u2019unit\u00E9 commerciale d\u00E9clar\u00E9e peut \u00EAtre command\u00E9e plusieurs fois. Cette information n'implique aucune indication quant \u00E0 la disponibilit\u00E9 courante de l'unit\u00E9 commerciale
 gs1_gs1Model.property.gs1_isTradeItemReorderable.title                                    = Article r\u00E9approvisionnable
+gs1_gs1Model.property.gs1_isTradeItemSeasonal.title                                       = Article saisonnier
 gs1_gs1Model.property.gs1_lastShipDateTime.description                                    = Date \u00E0 partir de laquelle l'unit\u00E9 commerciale d\u00E9clar\u00E9e n'est plus disponible \u00E0 l'exp\u00E9dition. Cette date est ind\u00E9pendante de l'endroit de la livraison
 gs1_gs1Model.property.gs1_lastShipDateTime.title                                          = Date de fin de disponibilit\u00E9 \u00E0 l\u2019exp\u00E9dition
 gs1_gs1Model.property.gs1_maximumTemperature.title                                        = Temp\u00E9rature maximun
@@ -232,6 +233,8 @@ gs1_gs1Model.property.gs1_secondaryDiameter.title                               
 gs1_gs1Model.property.gs1_secondaryHeight.title                                           = Hauteur (mm)
 gs1_gs1Model.property.gs1_secondaryNetWeight.title                                        = Poids net colis (kg)
 gs1_gs1Model.property.gs1_secondaryPackagingTypeCode.title                                = Type d'unit\u00E9 logistique
+gs1_gs1Model.property.gs1_secondaryStackingFactor.title                                   = Nb colis par emplacement (gerbage)
+gs1_gs1Model.property.gs1_secondaryStackingMaxWeight.title                                = Poids maximum de gerbage (kg)
 gs1_gs1Model.property.gs1_secondaryWeight.title                                           = Poids brut colis(kg)
 gs1_gs1Model.property.gs1_secondaryWidth.title                                            = Largeur (mm)
 gs1_gs1Model.property.gs1_sellingUnitOfMeasure.description                                = Indication de l\u2019unit\u00E9 de mesure qui doit \u00EAtre utilis\u00E9e pour facturer l\u2019unit\u00E9 commerciale (pour les unit\u00E9s commerciales non vendues \u00E0 la pi\u00E8ce) (kg, m, m\u00B2, m3, l, \u2026)
@@ -243,6 +246,8 @@ gs1_gs1Model.property.gs1_specialItemCode.description                           
 gs1_gs1Model.property.gs1_specialItemCode.title                                           = Type de format sp\u00E9cial
 gs1_gs1Model.property.gs1_speciesForFisheryStatisticsPurposesCode.title                   = Esp\u00E8ce poisson
 gs1_gs1Model.property.gs1_speciesForFisheryStatisticsPurposesName.title                   = D\u00E9nomination
+gs1_gs1Model.property.gs1_stackingFactor.title                                            = Nb unit\u00E9s par emplacement (gerbage)
+gs1_gs1Model.property.gs1_stackingMaxWeight.title                                         = Poids maximum de gerbage (kg)
 gs1_gs1Model.property.gs1_startAvailabilityDateTime.title                                 = Date de d\u00E9but de disponibilit\u00E9 \u00E0 la commande
 gs1_gs1Model.property.gs1_storageStateCode.title                                          = \u00C9tat de stockage
 gs1_gs1Model.property.gs1_surfaceOfCheeseAtEndOfRipeningCode.description                  = La repr\u00E9sentation de la pr\u00E9sence ou non d'une cro\u00FBte \u00E0 la fin du processus de maturation. La cro\u00FBte est la coque ext\u00E9rieure du fromage qui se forme pendant le processus de fabrication du fromage. Les cro\u00FBtes sont naturelles et g\u00E9n\u00E9ralement comestibles, contrairement \u00E0 d'autres rev\u00EAtements, tels que la cire et le tissu, qui sont non comestibles.
