Fix #20543 - [Feature] Add new GHS fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
@@ -27,14 +27,21 @@ ghs_ghsmodel.type.ghs_personalProtection.title                = Equipements de p
 ghs_ghsmodel.type.ghs_pictogram.title                         = Pictogramme
 ghs_ghsmodel.type.ghs_precautionaryStatement.title            = Conseil de prudence
 
-listconstraint.ghs_hazardTypes.Environmental     = Dangers pour l\u2019environnement
-listconstraint.ghs_hazardTypes.Health            = Danger pour la sant\u00E9
-listconstraint.ghs_hazardTypes.Other             = Autre danger
-listconstraint.ghs_hazardTypes.Physical          = Danger physique
-listconstraint.ghs_precautionaryTypes.Disposal   = Elimination
-listconstraint.ghs_precautionaryTypes.General    = G\u00E9n\u00E9ral
-listconstraint.ghs_precautionaryTypes.Prevention = Pr\u00E9vention
-listconstraint.ghs_precautionaryTypes.Response   = Intervention
-listconstraint.ghs_precautionaryTypes.Storage    = Stockage
-listconstraint.ghs_signalWords.Danger            = Danger
-listconstraint.ghs_signalWords.Warning           = Attention
+listconstraint.ghs_hazardTypes.Environmental           = Dangers pour l\u2019environnement
+listconstraint.ghs_hazardTypes.Health                  = Danger pour la sant\u00E9
+listconstraint.ghs_hazardTypes.Other                   = Autre danger
+listconstraint.ghs_hazardTypes.Physical                = Danger physique
+listconstraint.ghs_precautionaryTypes.Disposal         = Elimination
+listconstraint.ghs_precautionaryTypes.General          = G\u00E9n\u00E9ral
+listconstraint.ghs_precautionaryTypes.Prevention       = Pr\u00E9vention
+listconstraint.ghs_precautionaryTypes.Response         = Intervention
+listconstraint.ghs_precautionaryTypes.Storage          = Stockage
+listconstraint.ghs_sdsStandardCodes.ANSI               = ANSI
+listconstraint.ghs_sdsStandardCodes.FITPC              = Fiche Information Technique Produit Cosm\u00E9tique
+listconstraint.ghs_sdsStandardCodes.GHS                = SGH
+listconstraint.ghs_sdsStandardCodes.OSHA               = OSHA
+listconstraint.ghs_sdsStandardCodes.OTHER              = Autre
+listconstraint.ghs_sdsStandardCodes.REACH              = R\u00E9glementation REACH
+listconstraint.ghs_sdsStandardCodes.RETAILER_REQUESTED = Demand\u00E9 par le d\u00E9taillant
+listconstraint.ghs_signalWords.Danger                  = Danger
+listconstraint.ghs_signalWords.Warning                 = Attention
