InProgress #21240 - [Feature] Added remaining fields

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -88,6 +88,7 @@ becpg.forms.help.gs1.packagingTypeCode                         = Indication du t
 becpg.forms.help.gs1.palletTypeCode                            = Indication du type de support palette utilis\u00E9.
 becpg.forms.help.gs1.platformTermsAndConditionsCode            = Code indiquant si le support est lou\u00E9, \u00E9changeable, consign\u00E9 ou perdu.
 becpg.forms.help.gs1.preparationInstructions                   = Le mode d\u2019emploi d\u2019une denr\u00E9e alimentaire est indiqu\u00E9 de fa\u00E7on \u00E0 permettre un usage appropri\u00E9 de cette denr\u00E9e
+becpg.forms.help.gs1.priceComparisonContentTypeCode            = Code indiquant le mode de calcul du prix comparatif (imprimé sur les étiquettes des rayons).
 becpg.forms.help.gs1.productHierarchy3                         = Brique de la classification GPC (ou Global Product Classification) \u00E0 laquelle se rattache l'unit\u00E9 commerciale d\u00E9clar\u00E9e. 
 becpg.forms.help.gs1.productHierarchy4                         = Classe de la classification IFLS \u00E0 laquelle se rattache l'unit\u00E9 commerciale d\u00E9clar\u00E9e.
 becpg.forms.help.gs1.promotionTypeCode                         = Type de promotion
@@ -142,6 +143,7 @@ becpg.forms.help.variantIds                                    = S\u00E9l\u00E9c
 becpg.forms.set.ac-info.label                                  = Action corrective
 becpg.forms.set.alcohol.label                                  = Boisson alcoolis\u00E9e
 becpg.forms.set.allergens-claims.label                         = Allerg\u00E8nes et all\u00E9gations
+becpg.forms.set.animalFeeding.label                            = Alimentation animale
 becpg.forms.set.assignees.label                                = Assignations
 becpg.forms.set.batch-info.label                               = Identification du lot
 becpg.forms.set.brief-documents.label                          = Documents du brief
