--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -16,6 +16,7 @@ aspect.bcpg_suppliersAspect              = Fournisseur
 aspect.bcpg_undeletableAspect            = Non supprimable
 aspect.ghs_sdsAspect                     = MSDS Aspect
 aspect.gs1_alcoholInformationAspect      = Aspect boisson alcoolis\u00E9e
+aspect.gs1_animalFeedingAspect           = Alimentation des animaux
 aspect.gs1_cheeseInformationAspect       = Aspect fromage
 aspect.gs1_gs1Aspect                     = Publication GS1
 aspect.gs1_innerPackAspect               = Aspect sous conditionnement
