--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -1,4 +1,5 @@
 
+gs1_gs1Model.aspect.gs1_animalFeedingAspect.title                                         = Alimentation des animaux
 gs1_gs1Model.aspect.gs1_AssetAspect.description                                           = Appliqu\u00E9 \u00E0 un noeud qui a \u00E9t\u00E9 publi\u00E9 vers GS1
 gs1_gs1Model.aspect.gs1_AssetAspect.title                                                 = Asset GS1
 gs1_gs1Model.aspect.gs1_DeliveryChannelAspect.description                                 = Appliqu\u00E9 \u00E0 un n\u0153ud qui repr\u00E9sente un canal de distribution GS1
@@ -34,6 +35,10 @@ gs1_gs1Model.association.gs1_targetMarketCountries.description                  
 gs1_gs1Model.association.gs1_targetMarketCountries.title                                  = Pays
 gs1_gs1Model.association.gs1_targetMarkets.description                                    = Un ensemble de march\u00E9s cibles pour le produit
 gs1_gs1Model.association.gs1_targetMarkets.title                                          = March\u00E9s cibles
+gs1_gs1Model.property.gs1_additionalTradeItemClassification1.title                        = Classification suppl\u00E9mentaire de l'article commercial
+gs1_gs1Model.property.gs1_additionalTradeItemClassification2.title                        = Classification suppl\u00E9mentaire de l'article commercial 2
+gs1_gs1Model.property.gs1_additionalTradeItemClassificationText1.title                    = Description de la classification suppl\u00E9mentaire de l'article commercial
+gs1_gs1Model.property.gs1_additionalTradeItemClassificationText2.title                    = Description de la classification suppl\u00E9mentaire de l'article commercial 2
 gs1_gs1Model.property.gs1_alcoholBeverageAge.description                                  = La p\u00E9riode pendant laquelle le produit alcoolis\u00E9 a vieilli. Par exemple, un whisky \u00E2g\u00E9 de 12 ans
 gs1_gs1Model.property.gs1_alcoholBeverageAge.title                                        = \u00C2ge de la boisson alcoolis\u00E9e (M)
 gs1_gs1Model.property.gs1_alcoholBeverageDistilledFromCode.description                    = Le ou les principaux ingr\u00E9dients \u00E0 partir desquels le produit alcoolis\u00E9 est \u00E9t\u00E9 distill\u00E9e. Exemple : Seigle, Pomme de terre, Canne \u00E0 sucre.
@@ -56,6 +61,12 @@ gs1_gs1Model.property.gs1_alcoholicBeverageSugarContent.description             
 gs1_gs1Model.property.gs1_alcoholicBeverageSugarContent.title                             = Teneur en sucre de la boisson alcoolis\u00E9e (g/L)
 gs1_gs1Model.property.gs1_alcoholicPermissionLevel.description                            = Indication d'un niveau d'autorisation pour les produits alcoolis\u00E9s en fonction de la classification du produit.
 gs1_gs1Model.property.gs1_alcoholicPermissionLevel.title                                  = Licence de d\u00E9bit de boissons n\u00E9cessaire
+gs1_gs1Model.property.gs1_animalFeedAdditiveStatement.title                               = D\u00E9claration des additifs pour l'alimentation animale
+gs1_gs1Model.property.gs1_animalFeedAnalyticalConstituentsStatement.title                 = D\u00E9claration des constituants analytiques pour l'alimentation animale
+gs1_gs1Model.property.gs1_animalFeedCompositionStatement.title                            = D\u00E9claration sur la composition des aliments pour animaux
+gs1_gs1Model.property.gs1_animalFeedingInstructions.title                                 = Instructions pour l'alimentation des animaux
+gs1_gs1Model.property.gs1_animalFeedType.title                                            = Type d'alimentation des animaux
+gs1_gs1Model.property.gs1_animalNutritionalClaim.title                                    = All\u00E9gation nutritionnelle pour les animaux
 gs1_gs1Model.property.gs1_beerStyleCode.description                                       = Une valeur pour fournir un nom de style pour les produits de bi\u00E8re, tels que Brown Porter, Imperial Stout, Witbier.
 gs1_gs1Model.property.gs1_beerStyleCode.title                                             = Type de bi\u00E8re
 gs1_gs1Model.property.gs1_bitternessOfBeerMeasurement.description                         = Indique le terme descriptif utilis\u00E9 par le produit fabricant pour identifier l'amertume de la bi\u00E8re, exprim\u00E9e en IBU.
@@ -69,6 +80,7 @@ gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.description         
 gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.title                         = Description de la p\u00E9riode de maturation du fromage
 gs1_gs1Model.property.gs1_cheeseMaturationProcessContainerTypeCode.description            = Le type de conteneur dans lequel la maturation du fromage se produit. Le conteneur influence directement la saveur du fromage. Le terme "maturation" est \u00E9galement connu dans d'autres march\u00E9s sous le nom "vieilli".
 gs1_gs1Model.property.gs1_cheeseMaturationProcessContainerTypeCode.title                  = Type de conteneur pour la maturation du fromage
+gs1_gs1Model.property.gs1_consumerUsageInstructions.title                                 = Instructions d'utilisation pour les consommateurs
 gs1_gs1Model.property.gs1_containerMaterialCode.description                               = Le mat\u00E9riau du conteneur utilis\u00E9 dans un processus sp\u00E9cifique pour un produit alcoolis\u00E9.
 gs1_gs1Model.property.gs1_containerMaterialCode.title                                     = Mat\u00E9riau du conteneur
 gs1_gs1Model.property.gs1_containerProcessTypeCode.description                            = Le processus qui est entrepris dans un conteneur sp\u00E9cifique pour un produit alcoolis\u00E9.
@@ -93,6 +105,8 @@ gs1_gs1Model.property.gs1_depth.title                                           
 gs1_gs1Model.property.gs1_descriptionShort.description                                    = Description courte en texte libre (sur 35 caract\u00E8res maximum) de l'unit\u00E9 commerciale d\u00E9clar\u00E9e. Cette description peut \u00EAtre utilis\u00E9e pour identifier l'unit\u00E9 commerciale au point de vente (tickets de caisse, \u00E9tiquettes de gondole). Pour assurer la compatibilit\u00E9 entre XML et EANCOM, les utilisateurs pourront choisir de limiter la longueur de ce libell\u00E9 \u00E0 20 caract\u00E8res.Le contenu de ce libell\u00E9 doit \u00EAtre en accord avec les r\u00E9glementations en vigueur applicables au produit.
 gs1_gs1Model.property.gs1_descriptionShort.title                                          = Libell\u00E9 court
 gs1_gs1Model.property.gs1_diameter.title                                                  = Diam\u00E8tre (mm)
+gs1_gs1Model.property.gs1_discontinuedDateTime.description                                = La date d'abandon doit toujours \u00EAtre ant\u00E9rieure \u00E0 la date de d\u00E9but de disponibilit\u00E9 \u00E0 la commande. La date d'abandon doit \u00EAtre toujours ant\u00E9rieure \u00E0 la date de la mise \u00E0 jour de sa valeur. La date d'abandon ne peut pas \u00EAtre renseign\u00E9e en m\u00EAme temps que la date de fin de fabrication.
+gs1_gs1Model.property.gs1_discontinuedDateTime.title                                      = Date d'abandon
 gs1_gs1Model.property.gs1_dutyFeeTaxAmount.title                                          = Montant
 gs1_gs1Model.property.gs1_dutyFeeTaxAmountUnit.title                                      = Monnaie
 gs1_gs1Model.property.gs1_dutyFeeTaxCategoryCode.title                                    = Type de taxe
@@ -201,6 +215,7 @@ gs1_gs1Model.property.gs1_healthClaimDescription.title                          
 gs1_gs1Model.property.gs1_preparationType.title                                           = Etat de pr\u00E9paration du produit
 gs1_gs1Model.property.gs1_priceBasisQuantity.title                                        = Quantit\u00E9
 gs1_gs1Model.property.gs1_priceBasisQuantityUnit.title                                    = Unit\u00E9 de quantit\u00E9
+gs1_gs1Model.property.gs1_priceComparisonContentTypeCode.title                                   = Type de comparaison des prix
 gs1_gs1Model.property.gs1_primaryAddedFlavouringCode.description                          = L'ar\u00F4me qui a \u00E9t\u00E9 ajout\u00E9 \u00E0 l'alcool produit. C'est le principal ajout.
 gs1_gs1Model.property.gs1_primaryAddedFlavouringCode.title                                = Saveur ajout\u00E9e principale
 gs1_gs1Model.property.gs1_productActivityTypeCode.description                             = Une liste de codes d\u00E9crivant le type d'activit\u00E9 effectu\u00E9e sur un \u00E9l\u00E9ment.
