InProgress #22267 - [Feature] Add missing datalist descriptions

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/qualityModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/qualityModel_fr.properties
@@ -135,6 +135,7 @@ qa_qamodel.property.qa_slTimePeriod.title                = D\u00E9lais d'analyse
 qa_qamodel.property.qa_wlComment.title                   = Commentaire
 qa_qamodel.property.qa_wlState.title                     = Etat
 qa_qamodel.type.qa_batch.title                           = Ordre de fabrication
+qa_qamodel.type.qa_batchAllocationList.description       = Liste des allocations produits
 qa_qamodel.type.qa_batchAllocationList.title             = Allocation
 qa_qamodel.type.qa_controlCharact.description            = Permet de saisir les caract\u00E9ristiques \u00E0 contr\u00F4ler
 #ControlCharact
