Fix #18986 - [Feature] Add nut Mini/Maxi in OLAP

--- a/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get_fr.properties
@@ -169,6 +169,8 @@ jsolap.nutritionClass.title              = Classe nutritionnelle
 jsolap.nutritionScale.caption            = Toutes les classes nutritionnelles
 jsolap.nutritionScale.title              = Echelle nutritionnelle
 jsolap.nutritionalFormulatedValues.title = Valeurs nutritionnelles formul\u00E9es
+jsolap.nutritionalMaxi.title             = Maxi
+jsolap.nutritionalMini.title             = Mini
 jsolap.nutritionalValues.title           = Valeurs nutritionnelles
 jsolap.origin.caption                    = Toutes les origines
 jsolap.origin.title                      = Toutes les origines
@@ -263,6 +265,8 @@ jsolap.state.title                       = \u00C9tat
 jsolap.statistics.title                  = Statistiques
 jsolap.stepPerName.title                 = Etape par nom
 jsolap.stepsNumber.title                 = Nombre d'\u00E9tapes
+jsolap.storageConditions.caption         = Toutes les conditions de conservations
+jsolap.storageConditions.title           = Conditions de conservation
 jsolap.subFamily.title                   = Sous-famille
 jsolap.subsidiary.caption                = Toutes les filiales
 jsolap.subsidiary.title                  = Filiale
