Fix #21240 - [Feature] Changed FR label for pegHole

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -16,7 +16,7 @@ gs1_gs1Model.aspect.gs1_marketingAspect.title                                   
 gs1_gs1Model.aspect.gs1_measuresAspect.title                                              = GS1 Mesures Aspect
 gs1_gs1Model.aspect.gs1_organicAspect.title                                               = Produit bio
 gs1_gs1Model.aspect.gs1_packagingAspect.title                                             = GS1 Emballage/Conditionnement Aspect
-gs1_gs1Model.aspect.gs1_pegHoleAspect.title                                               = Aspect trous de cheville
+gs1_gs1Model.aspect.gs1_pegHoleAspect.title                                               = Aspect trous d'accrochage
 gs1_gs1Model.aspect.gs1_productActivityDetailsAspect.title                                = D\u00E9tails de l'activit\u00E9
 gs1_gs1Model.aspect.gs1_promotionalAspect.title                                           = Aspect Promotion
 gs1_gs1Model.aspect.gs1_referencedTradeItemAspect.title                                   = Article li\u00E9
@@ -201,8 +201,8 @@ gs1_gs1Model.property.gs1_packagingTermsAndConditionsCode.title                 
 gs1_gs1Model.property.gs1_packagingTypeCode.title                                         = Type d'emballage / conditionnement
 gs1_gs1Model.property.gs1_packagingTypeDescription.title                                  = Description du type d'emballage
 gs1_gs1Model.property.gs1_palletTypeCode.title                                            = Type de support palette
-gs1_gs1Model.property.gs1_pegHoleNumber.title                                             = Nombre de trous de cheville
-gs1_gs1Model.property.gs1_pegHoleTypeCode.title                                           = Type de trous de cheville
+gs1_gs1Model.property.gs1_pegHoleNumber.title                                             = Nombre de trous d'accrochage
+gs1_gs1Model.property.gs1_pegHoleTypeCode.title                                           = Type de trous d'accrochage
 gs1_gs1Model.property.gs1_pegHorizontal.title                                             = Distance horizontale des trous de cheville (mm)
 gs1_gs1Model.property.gs1_pegVertical.title                                               = Distance verticale des trous de cheville (mm)
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolume.description                         = Le pourcentage d'alcool par volume dans la boisson alcoolis\u00E9e.
@@ -215,7 +215,7 @@ gs1_gs1Model.property.gs1_healthClaimDescription.title                          
 gs1_gs1Model.property.gs1_preparationType.title                                           = Etat de pr\u00E9paration du produit
 gs1_gs1Model.property.gs1_priceBasisQuantity.title                                        = Quantit\u00E9
 gs1_gs1Model.property.gs1_priceBasisQuantityUnit.title                                    = Unit\u00E9 de quantit\u00E9
-gs1_gs1Model.property.gs1_priceComparisonContentTypeCode.title                                   = Type de comparaison des prix
+gs1_gs1Model.property.gs1_priceComparisonContentTypeCode.title                            = Type de comparaison des prix
 gs1_gs1Model.property.gs1_primaryAddedFlavouringCode.description                          = L'ar\u00F4me qui a \u00E9t\u00E9 ajout\u00E9 \u00E0 l'alcool produit. C'est le principal ajout.
 gs1_gs1Model.property.gs1_primaryAddedFlavouringCode.title                                = Saveur ajout\u00E9e principale
 gs1_gs1Model.property.gs1_productActivityTypeCode.description                             = Une liste de codes d\u00E9crivant le type d'activit\u00E9 effectu\u00E9e sur un \u00E9l\u00E9ment.
