--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -21,7 +21,7 @@ aspect.gs1_cheeseInformationAspect       = Aspect fromage
 aspect.gs1_gs1Aspect                     = Publication GS1
 aspect.gs1_innerPackAspect               = Aspect sous conditionnement
 aspect.gs1_organicAspect                 = Produit bio
-aspect.gs1_pegHoleAspect                 = Aspect trous de cheville
+aspect.gs1_pegHoleAspect                 = Aspect trous d'accrochage
 aspect.gs1_referencedTradeItemAspect     = Article li\u00E9
 aspect.gs1_seasonalAspect                = Aspect saisons
 aspect.gs1_temperatureMeasurementAspect  = Temp\u00E9rature
