Fix #21240 - [Feature] Changed FR label for pegHole (missed 2)

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -203,8 +203,8 @@ gs1_gs1Model.property.gs1_packagingTypeDescription.title                        
 gs1_gs1Model.property.gs1_palletTypeCode.title                                            = Type de support palette
 gs1_gs1Model.property.gs1_pegHoleNumber.title                                             = Nombre de trous d'accrochage
 gs1_gs1Model.property.gs1_pegHoleTypeCode.title                                           = Type de trous d'accrochage
-gs1_gs1Model.property.gs1_pegHorizontal.title                                             = Distance horizontale des trous de cheville (mm)
-gs1_gs1Model.property.gs1_pegVertical.title                                               = Distance verticale des trous de cheville (mm)
+gs1_gs1Model.property.gs1_pegHorizontal.title                                             = Distance horizontale des trous d'accrochage (mm)
+gs1_gs1Model.property.gs1_pegVertical.title                                               = Distance verticale des trous d'accrochage (mm)
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolume.description                         = Le pourcentage d'alcool par volume dans la boisson alcoolis\u00E9e.
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolume.title                               = Pourcentage d'alcool par volume (%)
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolumeMeasurementPrecisionCode.description = Indique la pr\u00E9cision de la mesure pour le pourcentage d'alcool en volume sur l'\u00E9tiquette, par ex. Alc. < 0,5 vol.
