Fix #22267 - [Feature] Added descriptions for all lists

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -112,7 +112,7 @@ path.packagingrecyclingschemecode        = Sch\u00E9mas de tri
 path.packagingtermsandconditionscode     = Indications d'emballage r\u00E9utilisable
 path.packagingtypecodes                  = Types d'emballage
 path.pallettypecodes                     = Types de support palette
-path.personalprotections                 = Equipements de protection individuel
+path.personalprotections                 = Equipements de protection individuelle
 path.physicochems                        = Caract\u00E9ristiques physico-chimiques
 path.physicotypes                        = Type de physico-chimiques
 path.physicounits                        = Unit\u00E9s physico-chimiques
