--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -508,7 +508,7 @@ bcpg_bcpgmodel.type.bcpg_bioOrigin.description                            = Orig
 bcpg_bcpgmodel.type.bcpg_bioOrigin.title                                  = Origine biologique
 bcpg_bcpgmodel.type.bcpg_certification.description                        = Permet de saisir la certification
 bcpg_bcpgmodel.type.bcpg_certification.title                              = Certification
-bcpg_bcpgmodel.type.bcpg_charact.title                                    = Charact\u00E9ristique
+bcpg_bcpgmodel.type.bcpg_charact.title                                    = Caract\u00E9ristique
 bcpg_bcpgmodel.type.bcpg_client.description                               = Client
 bcpg_bcpgmodel.type.bcpg_client.title                                     = Client
 bcpg_bcpgmodel.type.bcpg_compoList.description                            = Liste des produits qui entrent dans la composition
@@ -580,7 +580,7 @@ bcpg_bcpgmodel.type.bcpg_physicoChem.description                          = Cara
 bcpg_bcpgmodel.type.bcpg_physicoChem.title                                = Caract\u00E9ristique physico-chimique
 bcpg_bcpgmodel.type.bcpg_physicoChemList.description                      = Liste des caract\u00E9ristiques physico-chimiques
 bcpg_bcpgmodel.type.bcpg_physicoChemList.title                            = Physico-chimiques
-bcpg_bcpgmodel.type.bcpg_plant.description                                = Liste des Usines
+bcpg_bcpgmodel.type.bcpg_plant.description                                = Liste des usines
 bcpg_bcpgmodel.type.bcpg_plant.title                                      = Usines
 bcpg_bcpgmodel.type.bcpg_precautionOfUse.description                      = Permet de saisir les donn\u00E9es li\u00E9es au pr\u00E9cautions d\u2019emploi (administration)
 bcpg_bcpgmodel.type.bcpg_precautionOfUse.title                            = Pr\u00E9cautions d\u2019emploi
@@ -604,8 +604,9 @@ bcpg_bcpgmodel.type.bcpg_rawMaterial.description                          = Mati
 bcpg_bcpgmodel.type.bcpg_rawMaterial.title                                = Mati\u00E8re premi\u00E8re
 bcpg_bcpgmodel.type.bcpg_regulatoryList.description                       = Liste conformit\u00E9s
 bcpg_bcpgmodel.type.bcpg_regulatoryList.title                             = Conformit\u00E9s
+bcpg_bcpgmodel.type.bcpg_regulatoryUsage.description                      = Liste des usages conformit\u00E9
 bcpg_bcpgmodel.type.bcpg_regulatoryUsage.title                            = Usage conformit\u00E9
-bcpg_bcpgmodel.type.bcpg_reqCtrlList.description                          = Listes des Exigences non respect\u00E9es
+bcpg_bcpgmodel.type.bcpg_reqCtrlList.description                          = Listes des exigences non respect\u00E9es
 bcpg_bcpgmodel.type.bcpg_reqCtrlList.title                                = Exigences non respect\u00E9es
 bcpg_bcpgmodel.type.bcpg_resourceProduct.description                      = Ressource
 bcpg_bcpgmodel.type.bcpg_resourceProduct.title                            = Ressource
@@ -613,13 +614,13 @@ bcpg_bcpgmodel.type.bcpg_semiFinishedProduct.description                  = Prod
 bcpg_bcpgmodel.type.bcpg_semiFinishedProduct.title                        = Produit semi fini
 bcpg_bcpgmodel.type.bcpg_storageConditions.description                    = Permet de saisir les conditions de conservation (administration)
 bcpg_bcpgmodel.type.bcpg_storageConditions.title                          = Conditions de conservation
-bcpg_bcpgmodel.type.bcpg_subsidiary.description                           = Liste des Filiales
+bcpg_bcpgmodel.type.bcpg_subsidiary.description                           = Liste des filiales
 bcpg_bcpgmodel.type.bcpg_subsidiary.title                                 = Filiales
 bcpg_bcpgmodel.type.bcpg_supplier.description                             = Fournisseur
 bcpg_bcpgmodel.type.bcpg_supplier.title                                   = Fournisseur
 bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances extr\u00EAmement pr\u00E9occupantes
 bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Substances dangeureuses
-bcpg_bcpgmodel.type.bcpg_trademark.description                            = Liste des Marques
+bcpg_bcpgmodel.type.bcpg_trademark.description                            = Liste des marques
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Marques
 
 listconstraint.bcpg_compoListUnit.P                                   = Pi\u00E8ce
