--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel_fr.properties
@@ -4,7 +4,7 @@ ghs_ghsmodel.association.ghs_sdsClassCode.title               = Code classe
 ghs_ghsmodel.association.ghs_sdsHazardStatements.title        = Mentions de danger
 ghs_ghsmodel.association.ghs_sdsOnuCode.title                 = Code ONU
 ghs_ghsmodel.association.ghs_sdsPackagingGroupCode.title      = Code groupe emballage 
-ghs_ghsmodel.association.ghs_sdsPersonalProtections.title     = Equipements de protection individuel
+ghs_ghsmodel.association.ghs_sdsPersonalProtections.title     = Equipements de protection individuelle
 ghs_ghsmodel.association.ghs_sdsPictograms.title              = Pictogrammes
 ghs_ghsmodel.association.ghs_sdsPrecautionaryStatements.title = Conseils de prudence
 ghs_ghsmodel.property.ghs_classCodeNumber.title               = Code
@@ -22,9 +22,13 @@ ghs_ghsmodel.property.ghs_sdsSheetNumber.title                = Num\u00E9ro de F
 ghs_ghsmodel.property.ghs_sdsSignalWord.title                 = Mention d'avertissement
 ghs_ghsmodel.property.ghs_sdsStandardCode.title               = Standard FDS
 ghs_ghsmodel.property.ghs_signalWord.title                    = Avertissement
+ghs_ghsmodel.type.ghs_hazardStatement.description             = Liste des mentions de danger
 ghs_ghsmodel.type.ghs_hazardStatement.title                   = Mention de danger
-ghs_ghsmodel.type.ghs_personalProtection.title                = Equipements de protection individuel
-ghs_ghsmodel.type.ghs_pictogram.title                         = Pictogramme
+ghs_ghsmodel.type.ghs_personalProtection.description          = Liste des \u00E9quipements de protection individuelle
+ghs_ghsmodel.type.ghs_personalProtection.title                = Equipements de protection individuelle
+ghs_ghsmodel.type.ghs_pictogram.description                   = Liste des pictogrammes
+ghs_ghsmodel.type.ghs_pictogram.title                         = Pictogrammes
+ghs_ghsmodel.type.ghs_precautionaryStatement.description      = Liste des conseils de prudence
 ghs_ghsmodel.type.ghs_precautionaryStatement.title            = Conseil de prudence
 
 listconstraint.ghs_hazardTypes.Environmental     = Dangers pour l\u2019environnement
