--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -305,12 +305,13 @@ gs1_gs1Model.property.gs1_vintner.description                                   
 gs1_gs1Model.property.gs1_vintner.title                                                   = Vigneron
 gs1_gs1Model.property.gs1_weight.title                                                    = Poids brut (kg)
 gs1_gs1Model.property.gs1_width.title                                                     = Largeur (mm)
+gs1_gs1Model.type.gs1_alcoholBeverageContainer.description                                = Liste des r\u00E9cipients pour boissons alcoolis\u00E9es
 gs1_gs1Model.type.gs1_alcoholBeverageContainer.title                                      = R\u00E9cipient pour boissons alcoolis\u00E9es
 gs1_gs1Model.type.gs1_collectionPriceList.description                                     = Liste des prix de vente (Collection)
 gs1_gs1Model.type.gs1_collectionPriceList.title                                           = Prix de vente
 gs1_gs1Model.type.gs1_dutyFeeTaxList.description                                          = Liste de taxes
 gs1_gs1Model.type.gs1_dutyFeeTaxList.title                                                = Taxes
-gs1_gs1Model.type.gs1_fishReportingInformationList.description                            = Liste des informations poisson
+gs1_gs1Model.type.gs1_fishReportingInformationList.description                            = Liste des informations sur le poisson
 gs1_gs1Model.type.gs1_fishReportingInformationList.title                                  = Informations poisson
 gs1_gs1Model.type.gs1_gs1ParentType.title                                                 = Type Parent GS1
 gs1_gs1Model.type.gs1_targetMarket.description                                            = Un ensemble de march\u00E9s cibles
