--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/mpmModel_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/mpmModel_en.properties
@@ -27,7 +27,7 @@ mpm_mpmmodel.property.mpm_rplParamType.title        = Parameter type
 mpm_mpmmodel.property.mpm_rplParamValue.title       = Value
 mpm_mpmmodel.type.mpm_processList.description       = List of process used
 mpm_mpmmodel.type.mpm_processList.title             = Process list
-mpm_mpmmodel.type.mpm_processStep.description       = Step of Process
+mpm_mpmmodel.type.mpm_processStep.description       = Step of process
 mpm_mpmmodel.type.mpm_processStep.title             = Process step
 mpm_mpmmodel.type.mpm_resourceParam.description     = Enter the resource parameters
 mpm_mpmmodel.type.mpm_resourceParam.title           = Resource parameter (Administration)
