--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/mpmModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/mpmModel_fr.properties
@@ -27,8 +27,8 @@ mpm_mpmmodel.property.mpm_rplParamType.title        = Type de param\u00E8tre
 mpm_mpmmodel.property.mpm_rplParamValue.title       = Valeur
 mpm_mpmmodel.type.mpm_processList.description       = Liste des process mis en oeuvre
 mpm_mpmmodel.type.mpm_processList.title             = Liste des process
-mpm_mpmmodel.type.mpm_processStep.description       = Etape d'un Process
-mpm_mpmmodel.type.mpm_processStep.title             = Etape Process
+mpm_mpmmodel.type.mpm_processStep.description       = Etape d'un process
+mpm_mpmmodel.type.mpm_processStep.title             = Etape process
 mpm_mpmmodel.type.mpm_resourceParam.description     = Permet de saisir le param\u00E8tre ressource
 mpm_mpmmodel.type.mpm_resourceParam.title           = Param\u00E8tre ressource (Administration)
 mpm_mpmmodel.type.mpm_resourceParamList.description = Permet de saisir les param\u00E8tres ressource
