--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
@@ -138,7 +138,7 @@ pjt_pjtmodel.property.pjt_tlWork.title                    = Temps budg\u00E9t\u0
 pjt_pjtmodel.property.pjt_tlWorkflowInstance.title        = Instance du workflow
 pjt_pjtmodel.property.pjt_tlWorkflowName.title            = Nom du workflow
 pjt_pjtmodel.property.pjt_worflowTransition.title         = Transition
-pjt_pjtmodel.type.pjt_budgetList.description              = permet de saisir les d\u00E9tails du budget
+pjt_pjtmodel.type.pjt_budgetList.description              = Permet de saisir les d\u00E9tails du budget
 pjt_pjtmodel.type.pjt_budgetList.title                    = Budget
 pjt_pjtmodel.type.pjt_deliverableList.description         = Liste des livrables
 pjt_pjtmodel.type.pjt_deliverableList.title               = Livrables
@@ -146,7 +146,7 @@ pjt_pjtmodel.type.pjt_entityRequestList.description       = Liste  de demandes, 
 pjt_pjtmodel.type.pjt_entityRequestList.title             = Liste de demandes
 pjt_pjtmodel.type.pjt_expenseList.description             = Permet de saisir les d\u00E9tails des d\u00E9penses
 pjt_pjtmodel.type.pjt_expenseList.title                   = D\u00E9penses
-pjt_pjtmodel.type.pjt_invoiceList.description             = Permet de saisir les d\u00E9tails de facturation.
+pjt_pjtmodel.type.pjt_invoiceList.description             = Permet de saisir les d\u00E9tails de facturation
 pjt_pjtmodel.type.pjt_invoiceList.title                   = Facturations
 pjt_pjtmodel.type.pjt_logTimeList.description             = Permet de saisir les temps pass\u00E9s
 pjt_pjtmodel.type.pjt_logTimeList.title                   = Temps pass\u00E9
