Fix #18972 - [Feature] Add export generation to notifications

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/paths_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/paths_en.properties
@@ -1,24 +1,25 @@
 
-path.autonum                = AutoNum values for codes
-path.brief                  = Brief
-path.compareproducts        = Comparison report
-path.configs                = Configurations
-path.dictionary             = Data dictionary
-path.documents              = Documents
-path.entitytemplates        = Entity templates
-path.exportsearch           = Exports search
-path.icons                  = Icons
-path.images                 = Images
-path.license                = License
-path.linkedlists            = Lists of linked values
-path.lists                  = Lists of values
-path.logoimage              = Logo
-path.logoimage.systemEntity = Logo
-path.models                 = Models
-path.notifications          = Notifications
-path.olapqueries            = Olap Queries
-path.reportkindlist         = Report kinds
-path.reportparams           = Report parameters
-path.reports                = Reports
-path.security               = Security
-path.system                 = System
+path.autonum                     = AutoNum values for codes
+path.brief                       = Brief
+path.compareproducts             = Comparison report
+path.configs                     = Configurations
+path.dictionary                  = Data dictionary
+path.documents                   = Documents
+path.entitytemplates             = Entity templates
+path.exchangeexportnotifications = Notifications
+path.exportsearch                = Exports search
+path.icons                       = Icons
+path.images                      = Images
+path.license                     = License
+path.linkedlists                 = Lists of linked values
+path.lists                       = Lists of values
+path.logoimage                   = Logo
+path.logoimage.systemEntity      = Logo
+path.models                      = Models
+path.notifications               = Notifications
+path.olapqueries                 = Olap Queries
+path.reportkindlist              = Report kinds
+path.reportparams                = Report parameters
+path.reports                     = Reports
+path.security                    = Security
+path.system                      = System
