--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/paths_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/paths_fr.properties
@@ -1,24 +1,25 @@
 
-path.autonum                = Valeurs autoNum pour les codes
-path.brief                  = Brief
-path.compareproducts        = Rapport de comparaison
-path.configs                = Configurations
-path.dictionary             = Dictionnaire de donn\u00E9es
-path.documents              = Documents
-path.entitytemplates        = Mod\u00E8les d'entit\u00E9s
-path.exportsearch           = Exports de recherche
-path.icons                  = Ic\u00F4nes
-path.images                 = Images
-path.license                = Licence
-path.linkedlists            = Listes de valeurs li\u00E9es
-path.lists                  = Listes de valeurs
-path.logoimage              = Logo
-path.logoimage.systemEntity = Logo
-path.models                 = Mod\u00E8les
-path.notifications          = Notifications
-path.olapqueries            = Requ\u00EAtes OLAP
-path.reportkindlist         = Sous-types de rapport\n
-path.reportparams           = Param\u00E8tres rapport
-path.reports                = Rapports
-path.security               = R\u00E8gles de s\u00E9curit\u00E9
-path.system                 = Syst\u00E8me
+path.autonum                     = Valeurs autoNum pour les codes
+path.brief                       = Brief
+path.compareproducts             = Rapport de comparaison
+path.configs                     = Configurations
+path.dictionary                  = Dictionnaire de donn\u00E9es
+path.documents                   = Documents
+path.entitytemplates             = Mod\u00E8les d'entit\u00E9s
+path.exchangeexportnotifications = Notifications
+path.exportsearch                = Exports de recherche
+path.icons                       = Ic\u00F4nes
+path.images                      = Images
+path.license                     = Licence
+path.linkedlists                 = Listes de valeurs li\u00E9es
+path.lists                       = Listes de valeurs
+path.logoimage                   = Logo
+path.logoimage.systemEntity      = Logo
+path.models                      = Mod\u00E8les
+path.notifications               = Notifications
+path.olapqueries                 = Requ\u00EAtes OLAP
+path.reportkindlist              = Sous-types de rapport\n
+path.reportparams                = Param\u00E8tres rapport
+path.reports                     = Rapports
+path.security                    = R\u00E8gles de s\u00E9curit\u00E9
+path.system                      = Syst\u00E8me
