--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project_fr.properties
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project_fr.properties
@@ -50,6 +50,7 @@ becpg.forms.set.notification-email.label                   = Email
 becpg.forms.set.notification-filter.label                  = Filtres
 becpg.forms.set.notification-recurring.label               = R\u00E9currence
 becpg.forms.set.notification-rule.label                    = Notification
+becpg.forms.set.notification-report.label				   = Rapport
 becpg.forms.set.planning.label                             = Planning
 becpg.forms.set.project.label                              = Projet
 becpg.forms.set.reasign.label                              = R\u00E9assigner \u00E0
