Fix #21334 - [Feature] Add prepared roundeed value column

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -370,6 +370,7 @@ bcpg_bcpgmodel.property.bcpg_nutListMeasurementPrecision.title            = Meas
 bcpg_bcpgmodel.property.bcpg_nutListMethod.title                          = Method
 bcpg_bcpgmodel.property.bcpg_nutListMini.title                            = Mini
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValue.title                    = Labeled value
+bcpg_bcpgmodel.property.bcpg_nutListRoundedValuePrepared.title            = Prepared labeled value
 bcpg_bcpgmodel.property.bcpg_nutListUnit.title                            = Unit
 bcpg_bcpgmodel.property.bcpg_nutListUnitPrepared.title                    = Unit as prepared
 bcpg_bcpgmodel.property.bcpg_nutListValue.title                           = Value
