--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -370,6 +370,7 @@ bcpg_bcpgmodel.property.bcpg_nutListMeasurementPrecision.title            = Pr\u
 bcpg_bcpgmodel.property.bcpg_nutListMethod.title                          = M\u00E9thode
 bcpg_bcpgmodel.property.bcpg_nutListMini.title                            = Mini
 bcpg_bcpgmodel.property.bcpg_nutListRoundedValue.title                    = Valeur \u00E9tiquet\u00E9e
+bcpg_bcpgmodel.property.bcpg_nutListRoundedValuePrepared.title            = Valeur \u00E9tiquet\u00E9e pr\u00E9par\u00E9e
 bcpg_bcpgmodel.property.bcpg_nutListUnit.title                            = Unit\u00E9
 bcpg_bcpgmodel.property.bcpg_nutListUnitPrepared.title                    = Unit\u00E9 pr\u00E9par\u00E9e
 bcpg_bcpgmodel.property.bcpg_nutListValue.title                           = Valeur
