Fix #22267 - [Feature] Added "(administration)" to some descriptions + removed productListItem

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -592,8 +592,6 @@ bcpg_bcpgmodel.type.bcpg_productCollection.description                    = Coll
 bcpg_bcpgmodel.type.bcpg_productCollection.title                          = Collection
 bcpg_bcpgmodel.type.bcpg_productList.description                          = Liste de produits
 bcpg_bcpgmodel.type.bcpg_productList.title                                = Produits
-bcpg_bcpgmodel.type.bcpg_productListItem.description                      = Permet de saisir les produits
-bcpg_bcpgmodel.type.bcpg_productListItem.title                            = Liste produits
 bcpg_bcpgmodel.type.bcpg_productMicrobioCriteria.description              = Exigences sur les crit\u00E8res microbiologiques
 bcpg_bcpgmodel.type.bcpg_productMicrobioCriteria.title                    = Crit\u00E8res microbiologiques
 bcpg_bcpgmodel.type.bcpg_productSpecCompatibilityList.description         = Liste des produits non compatibles
@@ -620,7 +618,7 @@ bcpg_bcpgmodel.type.bcpg_supplier.description                             = Four
 bcpg_bcpgmodel.type.bcpg_supplier.title                                   = Fournisseur
 bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances extr\u00EAmement pr\u00E9occupantes
 bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Substances dangeureuses
-bcpg_bcpgmodel.type.bcpg_trademark.description                            = Liste des marques
+bcpg_bcpgmodel.type.bcpg_trademark.description                            = Liste des marques (administration)
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Marques
 
 listconstraint.bcpg_compoListUnit.P                                   = Pi\u00E8ce
