--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -592,8 +592,6 @@ bcpg_bcpgmodel.type.bcpg_productCollection.description                    = Coll
 bcpg_bcpgmodel.type.bcpg_productCollection.title                          = Collection
 bcpg_bcpgmodel.type.bcpg_productList.description                          = List of products
 bcpg_bcpgmodel.type.bcpg_productList.title                                = Products
-bcpg_bcpgmodel.type.bcpg_productListItem.description                      = List of products
-bcpg_bcpgmodel.type.bcpg_productListItem.title                            = Product list
 bcpg_bcpgmodel.type.bcpg_productMicrobioCriteria.description              = Requirements on microbiological criteria
 bcpg_bcpgmodel.type.bcpg_productMicrobioCriteria.title                    = Microbiological criteria
 bcpg_bcpgmodel.type.bcpg_productSpecCompatibilityList.description         = List of non compatible products
@@ -620,7 +618,7 @@ bcpg_bcpgmodel.type.bcpg_supplier.description                             = Supp
 bcpg_bcpgmodel.type.bcpg_supplier.title                                   = Supplier
 bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances of very high concern
 bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Dangerous substances
-bcpg_bcpgmodel.type.bcpg_trademark.description                            = Trademark
+bcpg_bcpgmodel.type.bcpg_trademark.description                            = Trademark (administration)
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Trademark
 
 listconstraint.bcpg_compoListUnit.P                                   = Each
