Fix #21401 - [Feature] Add evaporation rate in labeling

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_en.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_en.properties
@@ -12,6 +12,7 @@ aspect.bcpg_regulatoryAspect             = Regulatory aspect
 aspect.bcpg_regulatoryCodeAspect         = Regulatory code aspect
 aspect.bcpg_suppliersAspect              = Suppliers
 aspect.bcpg_undeletableAspect            = Undeletable aspect
+aspect.bcpg_waterAspect                  = Evaporable
 aspect.ghs_sdsAspect                     = Safety datasheet Aspect
 aspect.gs1_alcoholInformationAspect      = Alcohol information aspect
 aspect.gs1_animalFeedingAspect           = Animal feeding aspect
