--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -27,8 +27,8 @@ bcpg_bcpgmodel.aspect.bcpg_productTypeAspect.description                  = Prod
 bcpg_bcpgmodel.aspect.bcpg_productTypeAspect.title                        = Product type
 bcpg_bcpgmodel.aspect.bcpg_profitabilityAspect.description                = Profitability of the product
 bcpg_bcpgmodel.aspect.bcpg_profitabilityAspect.title                      = Product - profitability
-bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.description              = Reconstitutable Aspect
-bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.title                    = Reconstitutable Aspect
+bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.description              = Reconstitutable aspect
+bcpg_bcpgmodel.aspect.bcpg_reconstitutableAspect.title                    = Reconstitutable aspect
 bcpg_bcpgmodel.aspect.bcpg_regulatoryAspect.title                         = Regulatory aspect
 bcpg_bcpgmodel.aspect.bcpg_regulatoryCodeAspect.title                     = Regulatory code aspect
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.description                     = Supplier
@@ -39,6 +39,8 @@ bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                               = Dang
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.description               = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.title                     = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_undeletableAspect.description                  = Undeletable aspect
+bcpg_bcpgmodel.aspect.bcpg_waterAspect.description                        = Evaporable aspect
+bcpg_bcpgmodel.aspect.bcpg_waterAspect.title                              = Evaporable aspect
 bcpg_bcpgmodel.association.bcpg_advAlInVolAnd.title                       = Allergens present involuntarily
 bcpg_bcpgmodel.association.bcpg_advAlInVolNot.title                       = Allergens not present involuntarily
 bcpg_bcpgmodel.association.bcpg_advAlVolAnd.title                         = Allergens present voluntarily
@@ -239,6 +241,7 @@ bcpg_bcpgmodel.property.bcpg_ecoScore.title                               = Ecol
 bcpg_bcpgmodel.property.bcpg_ecoScoreCategory.title                       = EcoScore category
 bcpg_bcpgmodel.property.bcpg_ecoScoreDetails.title                        = EcoScore
 bcpg_bcpgmodel.property.bcpg_erpCode.title                                = ERP code
+bcpg_bcpgmodel.property.bcpg_evaporatedRate.title                         = Evaporation rate
 bcpg_bcpgmodel.property.bcpg_fdaNumber.title                              = FDA Cat.
 bcpg_bcpgmodel.property.bcpg_femaNumber.title                             = FEMA No.
 bcpg_bcpgmodel.property.bcpg_filIsGMO.title                               = GMO
