--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -39,6 +39,8 @@ bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                               = Subs
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.description               = Produit transform\u00E9
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.title                     = Produit transform\u00E9
 bcpg_bcpgmodel.aspect.bcpg_undeletableAspect.description                  = Non supprimable
+bcpg_bcpgmodel.aspect.bcpg_waterAspect.description                        = Aspect \u00E9vaporable 
+bcpg_bcpgmodel.aspect.bcpg_waterAspect.title                              = Aspect \u00E9vaporable
 bcpg_bcpgmodel.association.bcpg_advAlInVolAnd.title                       = Allerg\u00E8nes pr\u00E9sents fortuitement
 bcpg_bcpgmodel.association.bcpg_advAlInVolNot.title                       = Allerg\u00E8nes non pr\u00E9sents fortuitement
 bcpg_bcpgmodel.association.bcpg_advAlVolAnd.title                         = Allerg\u00E8nes pr\u00E9sents volontairement
@@ -239,6 +241,7 @@ bcpg_bcpgmodel.property.bcpg_ecoScore.title                               = Scor
 bcpg_bcpgmodel.property.bcpg_ecoScoreCategory.title                       = Cat\u00E9gorie EcoScore
 bcpg_bcpgmodel.property.bcpg_ecoScoreDetails.title                        = \u00C9chelle EcoScore
 bcpg_bcpgmodel.property.bcpg_erpCode.title                                = Code ERP
+bcpg_bcpgmodel.property.bcpg_evaporatedRate.title                         = Taux d'\u00E9vaporation
 bcpg_bcpgmodel.property.bcpg_fdaNumber.title                              = FDA Cat.
 bcpg_bcpgmodel.property.bcpg_femaNumber.title                             = No. FEMA
 bcpg_bcpgmodel.property.bcpg_filIsGMO.title                               = OGM interdit
